[package]
name = "dataflow-state"
version = "0.0.1"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true }
hashbag = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rocksdb.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-strategy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tuple = { workspace = true }
vec1 = { workspace = true }

# local deps
common = { path = "../readyset-common", package = "readyset-common" }
partial-map = { path = "../partial-map" }
readyset-alloc = { path = "../readyset-alloc" }
readyset-client = { path = "../readyset-client" }
readyset-data = { path = "../readyset-data" }
readyset-errors = { path = "../readyset-errors" }
readyset-sql = { path = "../readyset-sql" }
readyset-util = { path = "../readyset-util" }
replication-offset = { path = "../replication-offset" }
fail = { workspace = true, optional = true }
failpoint-macros = { path = "../failpoint-macros", optional = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
lazy_static = { workspace = true }
pretty_assertions = { workspace = true }
test-utils = { path = "../test-utils" }
proptest-stateful = { path = "../proptest-stateful" }
readyset-decimal = { path = "../readyset-decimal" }

[features]
failure_injection = [
    "fail/failpoints",
    "failpoint-macros",
    "readyset-util/failure_injection",
]

[[bench]]
name = "persistent_state"
harness = false

# This works around an issue that prevents us from passing arguments to the binary when running
# `cargo bench` when those arguments are supported by criterion but not libtest. See this link for
# more info:
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[lints]
workspace = true
