[package]
name = "ddl-stress"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]

[dependencies]
antithesis_sdk = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
failpoint-client = { path = "../failpoint-client" }
mysql_async = { workspace = true }
rand = { workspace = true }
readyset-util = { path = "../readyset-util" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
readyset-tracing = { path = "../readyset-tracing" }


[lints]
workspace = true
