[package]
name = "ensure-ebs-volume"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
aws-config = "0.9.0"
aws-sdk-ec2 = "0.9.0"
aws-sdk-sqs = "0.9.0"
aws-sdk-autoscaling = "0.9.0"
aws-types = "0.9.0"
clap = { version = "3.0", features = ["derive","env"] }
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.9", features = ["fmt"] }
nix = "0.23.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.2.0"
