[package]
name = "readyset-installer"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "0.2.0"
aws-sdk-ec2 = "0.2.0"
aws-sdk-rds = "0.2.0"
aws-types = "0.2.0"
clap = "3.0.0-beta.5"
console = "0.15.0"
dialoguer = "0.9.0"
directories = "4.0.1"
futures = "0.3"
indicatif = "0.16.2"
ipnet = "2.3"
iprange = "0.6.6"
launchpad = { path = "../launchpad" }
lazy_static = "1.4.0"
proptest = "1.0"
rusoto_credential = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-strategy = "0.1.2"
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread", "io-util"] }

[dev-dependencies]
tempfile = "3.2"
