[package]
name = "readyset-installer"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "0.2.0"
aws-sdk-cloudformation = "0.2.0"
aws-sdk-ec2 = "0.2.0"
aws-sdk-rds = "0.2.0"
aws-types = "0.2.0"
clap = "3.0.0-beta.5"
console = "0.15.0"
derive_more = "0.99.17"
dialoguer = "0.9.0"
directories = "4.0.1"
futures = "0.3"
indicatif = "0.16.2"
ipnet = "2.3"
iprange = "0.6.6"
itertools = "0.10.3"
launchpad = { path = "../launchpad" }
lazy_static = "1.4.0"
proptest = "1.0"
regex = "1.5"
reqwest = "0.11.7"
rusoto_credential = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1.0"
serde_with = "1.11.0"
serde_yaml = "0.8.23"
test-strategy = "0.1.2"
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread", "io-util"] }

[dev-dependencies]
tempfile = "3.2"
