[package]
name = "readyset-installer"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "0.9.0"
aws-sdk-cloudformation = "0.9.0"
aws-sdk-ec2 = "0.9.0"
aws-sdk-rds = "0.9.0"
aws-sdk-ssm = "0.9.0"
aws-sdk-kms = "0.9.0"
aws-types = "0.9.0"
clap = { version = "3.0", features = ["derive", "env"] }
console = "0.15.0"
derive_more = "0.99.17"
derive_builder = "0.11.0"
dialoguer = "0.9.0"
directories = "4.0"
futures = "0.3"
indicatif = "0.16"
ipnet = "2.3"
iprange = "0.6.6"
itertools = "0.10"
launchpad = { path = "../launchpad" }
lazy_static = "1.4.0"
proptest = "1.0"
regex = "1.5"
reqwest = "0.11.7"
rusoto_credential = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1.0"
serde_with = "1.11.0"
serde_yaml = "0.8.23"
test-strategy = "0.2.0"
tokio = { version = "1.15", features = ["fs", "macros", "rt", "rt-multi-thread", "io-util"] }
textwrap = "0.14"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.2"
