[package]
name = "js-client"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mysql_async = "0.28"

msql-srv = { path = "../msql-srv" }
noria-client = { path = "../noria-client" }
noria-mysql = { path = "../noria-mysql" }
noria = { path = "../noria/noria/" }
nom-sql = { path = "../nom-sql" }
tokio = { version = "1.8.4", features = ["full"] }
maplit = "1.0.2"
serde_json = "1.0.2"
chrono = { version = "0.4.0", features = ["serde"] }
rust_decimal = { version = "1.16" }

[dependencies.neon]
version = "0.9.1-napi"
default-features = false
features = ["napi-6", "event-queue-api"]
