[package]
name = "js-client"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mysql_async = "0.29"
maplit = "1.0.2"
serde_json = "1.0.2"
tokio = { version = "1.15", features = ["full"] }
chrono = { version = "0.4.0", features = ["serde"] }
rust_decimal = { version = "1.16" }

mysql-srv = { path = "../mysql-srv" }
noria-client = { path = "../noria-client" }
noria-data = { path = "../noria/data" }
noria-mysql = { path = "../noria-mysql" }
noria = { path = "../noria/noria/" }
nom-sql = { path = "../nom-sql" }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "event-queue-api"]
