[package]
name = "launchpad"
version = "0.1.0"
authors = ["Readyset"]
edition = "2018"
description = "Extensions to the Rust standard library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
proptest = "1.0.0"
reqwest = "0.11.1"
chrono = { version = "0.4.0", features = ["serde"] }
tokio = { version = "1.8.1", features = ["full"] }
futures = "0.3.15"
tracing = "0.1.26"
rust_decimal = { version = "1.16" }
eui48 = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1"
