[package]
name = "merging-interval-tree"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2024"
description = "An efficient non-overlapping interval tree that merges overlapping and adjacent intervals to prevent fragmentation"

[dependencies]

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
test-utils = { path = "../test-utils" }

[lints]
workspace = true
