[package]
name = "metrics-aggregator"
version = "0.1.0"
publish = false
authors = ["Readyset"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
noria = { path = "../noria/noria/" }
futures-executor = "0.3.14"
futures-util = "0.3.14"
lazy_static = "1.0.0"
nom-sql = { path = "../nom-sql" }
nom = "7.1"
regex = "1.0.0"
chrono = "0.4"
tracing = { version = "0.1", features = ["release_max_level_info"] }
vec1 = "1.6.0"
itertools = "0.10"
derive_more = "0.99.11"
thiserror = "1.0.26"
launchpad = { path = "../launchpad" }
metrics = "0.18"
futures = "0.3"
maplit = "1.0.2"
readyset-logging = { path = "../readyset-logging" }
serde = "1.0.130"
serde_json = "1.0.67"
rust_decimal = { version = "1.16" }
bit-vec = { version = "0.6", features = ["serde"] }
hyper = { version = "0.14.10", features = [ "stream", "server" ] }
stream-cancel = "0.8.0"
tokio-tower = "0.5.1"
tower = { version = "0.4.6", features = ["util"] }
async-trait = "0.1"
clap = { version = "3.0", features = ["derive","env"] }
tokio = { version = "1.15", features = ["signal", "rt-multi-thread", "time", "net"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
tracing-subscriber = "0.2.20"
tracing-futures = "0.2.5"
reqwest = { version = "0.11", features = ["json"] }
prometheus-http-query = "0.3.3"

[lib]
path = "src/lib.rs"


