[package]
name = "msql-srv"
version = "0.8.8"
edition = "2018"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/msql-srv" }
codecov = { repository = "jonhoo/msql-srv", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
nom = "5.0.1"
mysql_async = "0.27.1"
mysql_common = "0.26"
byteorder = "1"
chrono = "0.4"
time = "0.2.27"
getrandom = "0.2.2"
async-trait = "0.1"
tokio = { version = "1.8.1", features = ["io-util", "net", "macros", "rt-multi-thread"] }
thiserror = "1.0.26"
sha-1 = "0.9.6"
mysql-time = { path = "../mysql-time" }

[dev-dependencies]
postgres = "0.19.1"
mysql = "17.0.0"
mysql_async = "0.27.1"
slab = "0.4.2"
futures = "0.1.26"
