[package]
name = "msql-srv"
version = "0.8.8"
edition = "2018"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

[dependencies]
nom = "5.0.1"
mysql_async = "0.28"

mysql_common = "0.27.5"
byteorder = "1"
chrono = "0.4"
time = "0.2.27"
getrandom = "0.2.2"
async-trait = "0.1"
tokio = { version = "1.8.1", features = ["io-util", "net", "macros", "rt-multi-thread"] }
thiserror = "1.0.26"
sha-1 = "0.9.6"
mysql-time = { path = "../mysql-time" }

[dev-dependencies]
postgres = "0.19.1"
mysql = "21.0.1"
mysql_async = "0.28"

slab = "0.4.2"
futures = "0.1.26"

test_utils = { path = "../test_utils" }
