[package]
name = "mysql-srv"
version = "0.8.8"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

[dependencies]
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
itoa = { workspace = true }
mysql-time = { path = "../mysql-time" }
mysql_async = { workspace = true }
mysql_common = { workspace = true, features = ["chrono"] }
nom = { workspace = true }
sha-1 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

readyset-adapter-types = { path = "../readyset-adapter-types" }
readyset-data = { path = "../readyset-data" }
tokio-native-tls.workspace = true

[dev-dependencies]
tokio-postgres = { workspace = true }
mysql = { workspace = true }

slab = { workspace = true }
futures = { workspace = true }

test-utils = { path = "../test-utils" }
