[package]
name = "mysql-time"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
nom = "7.1"
regex = "1.4.3"
serde = { version = "1.0.8", features = ["rc"] }
readyset-util = { path = "../readyset-util" }
proptest = "1.0.0"
thiserror = "1.0.26"
chrono = "0.4"
mysql_common = "0.29.2"

[dev-dependencies]
test-strategy = "0.2.0"

