[package]
name = "mysql-time"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
nom = { workspace = true }
serde = { workspace = true, features = ["rc"] }
readyset-util = { path = "../readyset-util" }
proptest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
mysql_common = { workspace = true }

[dev-dependencies]
test-strategy = { workspace = true }

