[package]
name = "nom-sql-arbitrary"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

homepage = "https://github.com/readysettech/readyset/tree/master/nom-sql-arbitrary"
repository = "https://github.com/readysettech/readyset/tree/master/nom-sql-arbitrary"

description = "A library with proptest utility to generate AST structs."

[dependencies]
nom-sql = { path = "../nom-sql" }
proptest = "1.0.0"
