[package]
name = "nom-sql-arbitrary"
version = "0.1.0"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2024"

homepage = "https://github.com/readysettech/readyset/tree/master/nom-sql-arbitrary"
repository = "https://github.com/readysettech/readyset/tree/master/nom-sql-arbitrary"

description = "A library with proptest utility to generate AST structs."

[dependencies]
proptest = { workspace = true }
readyset-sql = { path = "../readyset-sql" }
readyset-util = { path = "../readyset-util" }

[lints]
workspace = true
