[package]
name = "nom-sql"
version = "0.0.11"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

homepage = "https://github.com/readysettech/readyset/tree/master/nom-sql"
repository = "https://github.com/readysettech/readyset/tree/master/nom-sql"

description = "A SQL parser written using nom."

[dependencies]
bit-vec = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
eui48 = { workspace = true }
fail = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
pratt = { workspace = true }
proptest = { workspace = true }
readyset-util = { path = "../readyset-util" }
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sqlparser = { workspace = true }
test-strategy = { workspace = true }
thiserror = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

concrete-iter = { path = "../concrete-iter" }
failpoint-macros = { path = "../failpoint-macros" }

[dev-dependencies]
assert_approx_eq = { workspace = true }
pretty_assertions = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

pprof = { workspace = true, features = ["flamegraph", "criterion"] }
sqlparser = { workspace = true }

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "parse"
harness = false

[features]
debug = []
failure_injection = ["fail/failpoints"]
