[package]
name = "nom-sql"
version = "0.0.11"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

homepage = "https://github.com/readysettech/readyset/tree/master/nom-sql"
repository = "https://github.com/readysettech/readyset/tree/master/nom-sql"

description = "A SQL parser written using nom."

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
nom = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true }
pratt = { workspace = true }
proptest = { workspace = true }
test-strategy = { workspace = true }
readyset-util = { path = "../readyset-util" }
readyset-sql = { path = "../readyset-sql" }
thiserror = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
eui48 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
bit-vec = { workspace = true, features = ["serde"] }
triomphe = { workspace = true }
lazy_static = { workspace = true }
nom_locate = { workspace = true }
fail = { workspace = true }
chrono = { workspace = true }

concrete-iter = { path = "../concrete-iter" }
failpoint-macros = { path = "../failpoint-macros" }

[dev-dependencies]
assert_approx_eq = { workspace = true }
pretty_assertions = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

pprof = { workspace = true, features = ["flamegraph", "criterion"] }
sqlparser = { workspace = true }

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "parse"
harness = false

[features]
debug = []
failure_injection = ["fail/failpoints"]
