[package]
name = "noria-client"
version = "0.1.0"
authors = ["Readyset"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arccstr = { version = "1.3.0", features = ["serde"] }
anyhow = "1.0"
msql-srv = { path = "../msql-srv" }
noria = { path = "../noria/noria/" }
timestamp_service = {path= "../noria/timestamp_service/"}
futures-executor = "0.3.14"
futures-util = "0.3.14"
lazy_static = "1.0.0"
mysql = "20.1.0"
mysql_async = {git = "https://github.com/readysettech/mysql_async", tag="v0.27.1_gtid"}
nom-sql = { path = "../nom-sql" }
nom = "5.0.1"
regex = "1.0.0"
tokio = { version = "1.8.1", features = ["signal", "rt-multi-thread", "time"] }
chrono = "0.4"
tracing = "0.1.3"
vec1 = "1.6.0"
itertools = "0.9"
derive_more = "0.99.11"
async-trait = "0.1.49"
thiserror = "1.0.26"
launchpad = { path = "../launchpad" }
metrics = "0.14.2"
noria-client-metrics = { path = "metrics" }
futures = "0.3.16"
slog = "2.4.0"
zookeeper = "0.5.4"
noria-server = { path = "../noria/server/" }
maplit = "1.0.2"
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git", features = ["with-chrono-0_4"] }

[lib]
path = "src/lib.rs"

[features]
ryw = []
