[package]
name = "noria-client"
version = "0.1.0"
authors = ["Readyset"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arccstr = { version = "1.3.0", features = ["serde"] }
anyhow = "1.0"
noria = { path = "../noria/noria/" }
timestamp_service = {path= "../noria/timestamp_service/"}
futures-executor = "0.3.14"
futures-util = "0.3.14"
lazy_static = "1.0.0"
nom-sql = { path = "../nom-sql" }
nom = "5.0.1"
regex = "1.0.0"
tokio = { version = "1.8.1", features = ["signal", "rt-multi-thread", "time"] }
chrono = "0.4"
tracing = "0.1.3"
vec1 = "1.6.0"
itertools = "0.9"
derive_more = "0.99.11"
async-trait = "0.1.49"
thiserror = "1.0.26"
launchpad = { path = "../launchpad" }
metrics = "0.14.2"
noria-client-metrics = { path = "metrics" }
futures = "0.3.16"
zookeeper = "0.5.4"
noria-server = { path = "../noria/server/" }
maplit = "1.0.2"
readyset-logging = { path = "../readyset-logging" }
serde = "1.0.130"
serde_json = "1.0.67"

[lib]
path = "src/lib.rs"

[features]
ryw = []
