[package]
name = "noria-client"
version = "0.1.0"
publish = false
authors = ["Readyset"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
noria = { path = "../noria/noria/" }
noria-errors = { path = "../noria/errors/" }
timestamp_service = {path= "../noria/timestamp_service/"}
futures-executor = "0.3.14"
futures-util = "0.3.14"
lazy_static = "1.0.0"
nom-sql = { path = "../nom-sql" }
nom = "5.0.1"
regex = "1.0.0"
tokio = { version = "1.8.1", features = ["signal", "rt-multi-thread", "time"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["release_max_level_info"] }
vec1 = "1.6.0"
itertools = "0.9"
derive_more = "0.99.11"
async-trait = "0.1.49"
thiserror = "1.0.26"
launchpad = { path = "../launchpad" }
metrics = "0.17.0"
noria-client-metrics = { path = "metrics" }
metrics-exporter-prometheus = "0.6.0"
futures = "0.3.16"
maplit = "1.0.2"
serde = "1.0.130"
serde_json = "1.0.67"
rust_decimal = { version = "1.16" }
bit-vec = { version = "0.6", features = ["serde"] }
hyper = { version = "0.14.10", features = [ "stream", "server" ] }
stream-cancel = "0.8.0"
tokio-stream = { version = "0.1.5", features = [ "net" ] }
tokio-tower = "0.5.1"
tower = { version = "0.4.6", features = ["util"] }
time = { version = "0.3", features = ["local-offset"] }
dashmap = "4.0.2"

[lib]
path = "src/lib.rs"

[features]
ryw = []
schema-check = []
