[package]
name = "noria-mysql"
version = "0.4.0"
authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]
edition = "2018"

[target.'cfg(not(target_env="msvc"))'.dependencies]
jemallocator = "0.3"

[dependencies]
clap = "3.0.0-beta.2"
async-trait = "0.1.51"
msql-srv = { path = "../msql-srv" }
mysql = "21.0.1"
mysql_async = { git = "https://github.com/readysettech/mysql_async", branch = "sync-with-upstream" }
noria = { path = "../noria/noria" }
noria-client = { path = "../noria-client" }
noria-client-adapter = { path = "../noria-client/adapter" }
nom-sql = { path = "../nom-sql" }
tokio = "1.8.1"
tracing = { version = "0.1", features = ["release_max_level_info"] }
anyhow = "1.0.42"
derive_more = "0.99.16"
thiserror = "1.0.26"
mysql_common = "0.27.5"

[dev-dependencies]
chrono = "0.4.19"
itertools = "0.10.1"
maplit = "1.0.2"
proptest = "1.0.0"
serial_test = "0.5.1"
test-strategy = "0.1.2"

[[example]]
name = "basic_demo"

[[example]]
name = "ryw"

[[example]]
name = "fallback"
