[package]
name = "noria-mysql"
publish = false
version = "0.4.0"
authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]
edition = "2018"
build = "src/build.rs"

[target.'cfg(not(target_env="msvc"))'.dependencies]
jemallocator = "0.3"

[dependencies]
clap = "3.0.0-beta.2"
async-trait = "0.1.51"
msql-srv = { path = "../msql-srv" }
mysql = "22.0.0"
mysql_async = "0.29"

noria = { path = "../noria/noria" }
noria-errors = { path = "../noria/errors" }
noria-data = { path = "../noria/data" }
noria-client = { path = "../noria-client" }
noria-client-adapter = { path = "../noria-client/adapter" }
nom-sql = { path = "../nom-sql" }
tokio = "1.8.4"
tracing = { version = "0.1", features = ["release_max_level_info"] }
anyhow = "1.0.42"
derive_more = "0.99.16"
thiserror = "1.0.26"
mysql_common = "0.28.0"
itertools = "0.10.1"

[dev-dependencies]
noria-client-test-helpers = { path = "../noria-client/test-helpers" }
chrono = "0.4.19"
maplit = "1.0.2"
paste = "1.0.5"
proptest = "1.0.0"
serial_test = "0.5.1"
test-strategy = "0.1.2"

[features]
vertical_tests = []

[[example]]
name = "basic_demo"

[[example]]
name = "ryw"
