[package]
name = "noria-psql"
version = "0.1.0"
edition = "2018"

[target.'cfg(not(target_env="msvc"))'.dependencies]
jemallocator = "0.3"

[dependencies]
clap = "3.0.0-beta.2"
arccstr = { version = "1.3.0", features = ["serde"] }
async-trait = "0.1"
noria = { path = "../noria/noria/" }
noria-client = { path = "../noria-client" }
noria-client-adapter = { path = "../noria-client/adapter" }
nom-sql = { path = "../nom-sql" }
psql-srv = { path = "../psql-srv" }
tokio = "1.8.1"
anyhow = "1.0.42"
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git", features = ["with-chrono-0_4"] }
postgres-native-tls = { git = "https://github.com/readysettech/rust-postgres.git" }
native-tls = "0.2.7"
futures = "0.3.16"

[dev-dependencies]
chrono = "0.4"
noria-server = { path = "../noria/server/" }
postgres = { git = "https://github.com/readysettech/rust-postgres.git", features = ["with-chrono-0_4"] }
slog = "2.4.0"
tokio = { version = "1.8.1", features = ["full"] }
zookeeper = "0.5.4"
