[package]
name = "noria-psql"
publish = false
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[target.'cfg(not(target_env="msvc"))'.dependencies]
tikv-jemallocator = "0.4"

[dependencies]
clap = { version = "3.0", features = ["derive","env"] }
async-trait = "0.1"
noria = { path = "../noria/noria/" }
noria-errors = { path = "../noria/errors/" }
noria-data = { path = "../noria/data/" }
noria-client = { path = "../noria-client" }
noria-client-adapter = { path = "../noria-client/adapter" }
nom-sql = { path = "../nom-sql" }
psql-srv = { path = "../psql-srv" }
tokio = "1.15"
anyhow = "1.0.42"
tokio-postgres = { git = "https://github.com/readysettech/rust-postgres.git", features = ["with-chrono-0_4", "with-eui48-1", "with-uuid-0_8", "with-serde_json-1", "with-bit-vec-0_6"] }
postgres-native-tls = { git = "https://github.com/readysettech/rust-postgres.git" }
native-tls = "0.2.7"
futures = "0.3"
itertools = "0.10"
thiserror = "1.0.26"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-futures = "0.2.5"
rust_decimal = { version = "1.16" }
eui48 = { version = "1.1", default-features = false }
uuid = "0.8"
serde_json = { version = "1", features = ["arbitrary_precision"] }
bit-vec = { version = "0.6", features = ["serde"] }

[dev-dependencies]
chrono = "0.4"
noria-server = { path = "../noria/server/" }
proptest = "1.0.0"
serial_test = "0.5.1"
test-strategy = "0.1.1"
tokio = { version = "1.15", features = ["full"] }
zookeeper = "0.6"
launchpad = { path = "../launchpad" }
noria-client-test-helpers = { path = "../noria-client/test-helpers", features = ["postgres"] }
