[package]
name = "proptest-stateful"
version = "0.1.3"
license = "Apache-2.0"
description = "Library for building stateful property tests using the proptest crate"
homepage = "https://github.com/readysettech/proptest-stateful/"
repository = "https://github.com/readysettech/proptest-stateful/"
documentation = "https://docs.rs/proptest-stateful/"
readme = "README.md"
keywords = ["property", "testing", "proptest", "stateful", "quickcheck"]
categories = ["development-tools::testing"]
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
proptest = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true, features = ["full"] }

