[package]
name = "proptest-stateful"
version = "0.1.3"
license = "Apache-2.0"
description = "Library for building stateful property tests using the proptest crate"
homepage = "https://github.com/readysettech/proptest-stateful/"
repository = "https://github.com/readysettech/proptest-stateful/"
documentation = "https://docs.rs/proptest-stateful/"
readme = "README.md"
keywords = ["property", "testing", "proptest", "stateful", "quickcheck"]
categories = ["development-tools::testing"]
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2024"

[dependencies]
# NOTE: DO NOT REPLACE THESE WITH WORKSPACE DEPENDENCIES. This crate is
# released publicly on crates.io, so we need to include the actual package
# versions here to ensure that the crate is usable outside of the context of
# our repo.
async-trait = "0.1"
proptest = "1.7.0"
rand = "0.9.1"
tokio = { version = "1.37", features = ["full"] }

[lints]
workspace = true
