[package]
name = "psql-srv"
version = "0.1.0"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

description = "Bindings for emulating a PostgreSQL server"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bytes = "1.0.1"
chrono = "0.4.19"
futures = "0.3"
nom-sql = { path = "../nom-sql" }
readyset-data = { path = "../readyset-data" }
postgres = { workspace = true }
postgres-types = { workspace = true, features = ["with-chrono-0_4", "with-cidr-0_2"] }
postgres-protocol = { workspace = true }
thiserror = "1.0.26"
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-eui48-1", "with-uuid-0_8", "with-serde_json-1", "with-bit-vec-0_6"] }
smallvec = "1.6"
hex = "0.4.3"
rust_decimal = { version = "1.26" }
eui48 = { workspace = true }
uuid = "0.8"
serde_json = { version = "1", features = ["arbitrary_precision"] }
bit-vec = { version = "0.6", features = ["serde"] }
tracing = "0.1.29"
cidr = "0.2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4.1"
